# TRP1-week-chimera-The-Agentic-Infrastructure-Challenge

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Day_1_Report.md  Dockerfile  Makefile  README.md  SECURITY.md  SECURITY_DISCLOSURE.md  chimera_3day_challenge.md  chimera_srs.md  day_2_plan.md  day_3_plan.md  demo_script.py  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  verify_mcp.py
.cursor/: rules.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DATABASE_STRATEGY.md  HITL_COMPLIANCE.md  HITL_DASHBOARD.md
mcp-server-mock/: server.py
personas/example_agent/: SOUL.md
research/: FULL_STRATEGY_REPORT.md  architecture_strategy.md  mcp_connection_log.txt  reading_notes.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md  base.py  skill_mcp_bridger.py
skills/skill_content_generator/: executor.py
skills/skill_persona_consistency/: executor.py
skills/skill_trend_analysis/: executor.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/governance/: confidence_scoring.py
src/mcp/: client.py
src/models/: schemas.py
src/persona/: soul.py
src/swarm/: base.py  judge.py  orchestrator.py  planner.py  state.py  worker.py
tests/: test_e2e_swarm.py  test_mcp_integration.py  test_new_skills.py  test_persona_safety.py  test_skill_content_generator.py  test_skills_interface.py  test_swarm_integration.py  test_swarm_runtime.py
