[project]
name = "trp1-week-chimera-the-agentic-infrastructure-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "mermaid-py>=0.8.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "weaviate-client>=4.19.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
